--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,14 @@
     url("font/PTSans-Bold.ttf") format("ttf")
 }
 
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -42,6 +50,8 @@ a {
   text-decoration: none;
   display: block;
 }
+
+/* Выше описаны общие стили */
 
 .header {
   color: var(--text-grey);
@@ -117,4 +127,46 @@ a {
 
 .header__item-second:hover {
   background-color: var(--hover-grey);
+}
+/* Выше стилизован хэдер */
+
+.info {
+  background-image: url(../img/background-first.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center 0;
+  padding-top: 160px;
+  padding-bottom: 154px;
+}
+
+.info__block {
+  border: 4px solid var(--basic-white);
+  width: 320px;
+  padding: 95px 0;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.info__p-logo {
+  color: var(--basic-white);
+  font-size: 22px;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 0;
+  border-top: 2px solid var(--basic-white);
+  padding-top: 7px;
+}
+
+.info__p {
+  width: 990px;
+  margin: 0 auto;
+  margin-top: 80px;
+  color: var(--basic-white);
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  text-transform: uppercase;
 }
